= Cerberus Changelog

== Version 0.2.2
Minor fix release

* Make rake executable recongnition process less verbose
* Refactored builder mecahnism in Cerberus. Now adding new Builder possible in much more easiest way
* Added Maven2 builder

== Version 0.2.1
Minor fix release

* publisher -> active flag now not mandatory. Use 'mail' publisher as active if not set any

== Version 0.2.0
Config file was changed since 0.1.1 and you need regenerate config files.
Or change it by hands: see doc/OPTIONS file to list of all avalable options.

Changing required by advanced publishing mechanism. Now it is possible to add several published to one project.

Also added 3 new publishers.
  Jabber Publisher - all notification sended via Jabber server
  IRC publisher - messages sent to IRC channel
  RSS Publisher - result of build Cerberus writes to file in RSS format.
    This feature would be useful for big open project when many users would like to see results of test-run.
    If you publish results as RSS - then any user could subscribe to channel.


* Added automatic subversion cleanup to avoid repository locking after Cedrberus process termination
* Added Jabber publisher
* Added IRC publisher
* Added RSS publisher

== Version 0.1.1
Minor improvements

* Added 'buildall' command that build all projects added to Cerberus repository.
* Fixed tests on *nix

== Version 0.1.0
Initial version of Cerberus tool

* Implemented basic functionality required by Continuous Integration.