@@ -19,3 +19,15 @@ Action:
 SWHide   NormalPriority
 START-APPW: c:\progra~1\ruby\bin\cerberus.CMD build cerberus
 )#
+
+
+* How to change task for Rake
+In my project we need to run Rails migrations before tests. But by default Cerberus runs :default task.
+How could I run migations?
+
+it is easy - just set Rake tasks option in config
+builder:
+  rake:
+    task: migrate test
+
+And it would run migrations
